CHANGES
*******

1.0a4 (unreleased)
==================

- Nothing changed yet.


1.0a3 (2013-08-12)
==================

- Refactor NeededResources into a pluggable injector system. Fanstatic users
  now have the possibility to customize how resources are injected into the
  HTML.

  We try to keep these changes backwards compatible for users that use
  the official API. People that use fanstatic internals are encouraged to
  update their code.

- Introduce "Inclusion" object; the responsibilities around bundling,
  compilation, debug/minified mode and rollup are moved from the
  NeededResources class to the Inclusion class.

1.0a2 (2013-05-25)
==================

- Move injection of the inclusions from the beginning of the <head> element to
  the end. See also:

  https://groups.google.com/forum/?fromgroups#!topic/fanstatic/VT_WasfDtL4

  This change may break your code, but it is probably a good idea to include
  the resources at the end of the <head>.

- Bugfix in sdist_compile: compile resources in *all* packages contained in a
  distribution.

- Fix tox/travis setup and update to buildout v2.

1.0a (2013-04-18)
=================

- Add support for compilers and minifiers.

  By default fanstatic ships with the sass/less and coffeescript compilers
  and mincss/minjs/google closure minifiers.

0.16 (2012-12-10)
=================

- Update Bundle object to share an API for the Resource one.

- Update injector to handle HTML pages that doesn't explicit set a
  charset in their headers.

0.15 (2012-11-08)
=================

- Add "default" argument to Slot to specify a resource which will be filled
  in if there is no other resource specified in need(). Thanks to nilo.

- Ensure published bundles carry the correct Content-Type header. Previously,
  all bundles were delivered with `text/html`. Thanks to David Beitey.


0.14 (2012-10-30)
=================

- Alex Grönholm added python3 and pypy support.

- Using tox to test on python2.6/2.7/3.2/3.3/pypy.
